Bugs squashing in progress

--- a/style.css
+++ b/style.css
@@ -1,12 +1,28 @@
-body{
-    opacity: 0.7;
-    background-color: #000;
-    color: #fff;
-    margin: 0;
-    padding: 0;
+body {
+  opacity: 0.7;
+  background-color: #000;
+  color: #fff;
+  margin: 0;
+  padding: 0;
 }
 .animation-container {
-    opacity: 0;
-    transform: translateY(20px);
-    transition: opacity 1s, transform 1s;
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 1s, transform 1s;
+}
+
+header {
+    background-image: url(Resources/Images/Background.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.black{
+    background-color: #00000085;
+   
+}
+
+.text-white{
+    color: #fff;
 }
